--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
     "helmet": "^6.0.0",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "validator": "^13.7.0",
